--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@tailwindcss/vite": "^4.1.11",
     "firebase": "^12.0.0",
     "lottie-react": "^2.4.1",
+    "motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.7.1",
+    "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
