--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.7.1",
+    "react-router-dom": "^7.7.1",
     "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11"
   },
